<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

  <groupId>me.alf21</groupId>
  <artifactId>textdraw-system</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <repository>
            <id>deployment</id>
            <name>Releases</name>
            <url>http://repo.sampx.ru/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>deployment</id>
            <name>Snapshots</name>
            <url>http://repo.sampx.ru/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            	<id>gtaun-public-repo</id>
            	<name>GTAUN Public Repository</name>
            	<url>http://repo.sampx.ru/repository/maven-public/</url>
       	</repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.gtaun</groupId>
            <artifactId>shoebill-api</artifactId>
            <version>2.0-RC</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <dependency>
		    <groupId>net.gtaun</groupId>
		    <artifactId>shoebill-common</artifactId>
		    <version>2.0-RC</version>
		    <type>jar</type>
		    <scope>compile</scope>
		</dependency>
    </dependencies>

    <build>
        <defaultGoal>clean install</defaultGoal>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
            </plugin>
        </plugins>
    </build>
</project>
